# IdentiBeer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
